--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="AC Installation Pembroke Pines, AC Repair Pembroke Pines, Air Duct cleaning-service, Air Duct Cleaning Pembroke Pines, Air Duct Sealing Pembroke Pines, Air Quality Pembroke Pines, AC Maintenance Pembroke Pines, AC Service Pembroke Pines, HVAC Services Pembroke Pines, Pembroke Pines AC Services, HVAC Services in Pembroke Pines">
     <meta name="robots" content="index, follow">
     <meta name="google-site-verification" content="Lr_XU2_Z9pTCO2H3T_jxNtkiIJyE-hVeA0DZw7jwiAw" />
+    <meta name="google-site-verification" content="Lr_XU2_Z9pTCO2H3T_jxNtkiIJyE-hVeA0DZw7jwiAw" />
     <meta name="google-site-verification" content="zXZ16jw5xF63s2V7H_HYDZYZVml_C-QJ7LVyO9lQcww" />
     <meta name="google-site-verification" content="1pBySA0ls2oyqxE84PhV4LoW8aLAKARBjj62v9_vDdQ" />
     <title>AC Repair Pembroke Pines | Reliable Air Conditioning & HVAC Services</title>
